fix padding overflow

--- a/styles/base.less
+++ b/styles/base.less
@@ -1,7 +1,15 @@
 @import "syntax-variables";
 
+atom-pane {
+  background-color: white;
+}
+
+atom-text-editor {
+  margin: 2rem 1rem;
+  background-color: white;
+}
+
 atom-text-editor, :host {
-  padding: 1rem;
   background-color: @syntax-background-color;
   color: @syntax-text-color;
 
